Fixed Wrapping on desktop

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -48,7 +48,7 @@ header {
 header h1 {
   font-size: 30px;
   line-height: 1.5;
-  margin: 0 0 0 -20px;
+  margin: 0 0 0 -40px;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   color: #b5e853;
@@ -63,6 +63,7 @@ header h1 {
 @media (max-width: 800px) {
   header h1{
     font-size: 28px;
+    margin: 0 0 0 -20px;
   }
 }
 
